# TER_2021

./: README.md  pyproject.toml
ter_2021/: GenesToDiseases3.py  convertToCsv.py  genesToDiseases.py  genesToDiseases2.py  howManySymp_Reverse.py  howManySymptoms.py
